made the web responsive using bootstrap and media queries

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
     <h1>Doreen Wambui Mbugua</h1>
     <h3>Front-end developer, based in Nairobi, Kenya</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link" title="Contacts">Contact me</a>
-      <a href="about.html" class="about-link" title="More">About me</a>
+      <a href="/about.html#contact" class="contact-link" title="Contacts">Contact me</a>
+      <a href="/about.html" class="about-link" title="More">About me</a>
     </div>
-    <div class="d-flex justify-content-evenly m-5">
+    <div class="projects d-flex justify-content-evenly m-5">
       <div>
         <img
           src="images/yoga.png"
           alt="yoga"
-          class="img-fluid p-3 border border-dark-subtle"
+          class="img-fluid p-3 border border-dark-subtle d-none d-sm-flex"
         />
       </div>
       <div>
@@ -73,17 +73,17 @@
           aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
           alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
           blanditiis harum.
-          <b />
+          <br />
           <button type="button" class="btn btn-primary mt-1">Start Yoga</button>
         </p>
       </div>
     </div>
-    <div class="d-flex justify-content-evenly m-5">
+    <div class="projects d-flex justify-content-evenly m-5">
       <div>
         <img
           src="images/yogurt.png"
           alt="yogurt"
-          class="img-fluid p-3 border border-dark-subtle"
+          class="img-fluid p-3 border border-dark-subtle d-none d-sm-flex"
         />
       </div>
       <div>
@@ -92,17 +92,17 @@
           aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
           alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
           blanditiis harum.
-          <b />
+          <br />
           <button type="button" class="btn btn-primary mt-1">Order Some</button>
         </p>
       </div>
     </div>
-    <div class="d-flex justify-content-evenly m-5">
+    <div class="projects d-flex justify-content-evenly m-5">
       <div>
         <img
           src="images/weather.png"
           alt="weather"
-          class="img-fluid p-3 border border-dark-subtle"
+          class="img-fluid p-3 border border-dark-subtle d-none d-sm-flex"
         />
       </div>
       <div>
@@ -111,7 +111,7 @@
           aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
           alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
           blanditiis harum.
-          <b />
+          <br />
           <button type="button" class="btn btn-primary mt-1">
             Know your weather
           </button>
